--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <html>
     <head>
+        <meta name="author" content="Laird Kruger">
         <meta charset="utf-8">
         <title>Twistline Visualizer</title>
         
